WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152563
[Curl] Compile errors.
https://bugs.webkit.org/show_bug.cgi?id=152563
Summary
[Curl] Compile errors.
peavo
Reported
2015-12-26 13:47:39 PST
The ResourceError constructor has changed signature.
Attachments
Patch
(2.17 KB, patch)
2015-12-26 13:53 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-12-26 13:53:56 PST
Created
attachment 267929
[details]
Patch
WebKit Commit Bot
Comment 2
2015-12-26 18:24:53 PST
Comment on
attachment 267929
[details]
Patch Clearing flags on attachment: 267929 Committed
r194422
: <
http://trac.webkit.org/changeset/194422
>
WebKit Commit Bot
Comment 3
2015-12-26 18:24:57 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 4
2015-12-27 04:34:28 PST
Thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug