[Curl] Compile errors. https://bugs.webkit.org/show_bug.cgi?id=152563

Reviewed by Alex Christensen.

The ResourceError constructor has changed signature.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::ResourceHandleManager::downloadTimerCallback):
(WebCore::ResourceHandleManager::dispatchSynchronousJob):


Canonical link: https://commits.webkit.org/170660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194422 268f45cc-cd09-0410-ab3c-d52691b4dbfc